# goiania_housing_market_prediction

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/: .gitignore
goh/: config.py  pipeline.py  reporting.py  train_cat.py  train_et.py  train_lgbm.py  train_lr.py  train_rf.py  train_xgb.py
goh/cleaning/: __main__.py  geography.py  inconsistencies.py  remove.py
goh/geocoding/: __init__.py  __main__.py  config.py  helpers.py  nhd.py  st.py  st_by_nhd.py
