[project]
name = "goiania-housing-market-prediction"
version = "0.1.0"
description = ""
authors = [
    { name = "Andre Koraleski", email = "andre.andre2@discente.ufg.br" },
    { name = "Frederico Relvas", email = "relvas@discente.ufg.br" },
    { name = "Henrick de Souza", email = "henrick.henrick@discente.ufg.br" },
    { name = "Lucas Nogueira", email = "lucas.nogueira@discente.ufg.br"},
    { name = "Marcos dos Anjos", email = "viniciusdosanjos@discente.ufg.br" },
    { name = "Raphael Alves", email = "raphael_alves@discente.ufg.br" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "catboost>=1.2.8",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.1.2",
]

[build-system]
requires = ["hatchling>=1.13,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["goh"]
